done
secara requirements selesai
tinggal deploy
